dnl Process this file with autoconf to produce a configure script.
AC_INIT(ijvm-asm.h)
AM_INIT_AUTOMAKE(ijvm-tools, 0.8)

dnl Checks for programs.
AC_PROG_CC
AM_PROG_LEX
AC_PROG_YACC

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Just for good measure...
AC_MSG_CHECKING(size of int)
AC_TRY_RUN([int main () { exit (sizeof (int) != 4); }], 
	   AC_MSG_RESULT([32 bits]),
           AC_MSG_ERROR([architechtures with sizeof (int) != 4 not handled]))

dnl Checks for library functions.
AC_FUNC_VPRINTF

AC_OUTPUT([
Makefile
test/Makefile
])
